--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 ﻿{
   "name": "permutation",
   "description": "Permutation module. Provides functionality over string permutation",
-  "version": "0.0.1",
-  "author": "Mário Marques <mariomarques@boldint.com>",
+  "version": "1.1.0",
+  "author": "Mário Marques <mario.fmarques@parceiros.nos.pt>",
   "keywords": "permutation",
   "main": "./permutation.js" 
 }
